--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Git practise</title>
+    <link rel="stylesheet" href="style.css"
   </head>
   <body>
     <h1 style="border:1px solid red; text-align:center; background:pink">This is Git-hib practise.</h1>
